--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -165,12 +165,21 @@ body {
     display: flex;
 }
 .cart_quantity_count{
-    margin-top: 16px;
-    /* background-color: red; */
-    margin-left: 27px;
     position: absolute;
-    font-size: 29px;
-
+    top: 10px;
+    right: 10px;
+    background: #e74c3c;
+    color: #fff;
+    border-radius: 50%;
+    width: 28px;
+    height: 28px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: bold;
+    z-index: 2;
+    border: 2px solid #fff;
 }
 .plantname_heading{
    display: flex;
@@ -216,7 +225,10 @@ body {
   }
   
   .product-button.added-to-cart {
-    background-color: grey; /* Grey when product is added */
+    background-color: #888;
+    color: #fff;
+    cursor: not-allowed;
+    border: 1px solid #888;
   }
   @media (max-width: 1200px) {
     .product-card {
