--- a/src/CartItem.css
+++ b/src/CartItem.css
@@ -228,7 +228,9 @@
       font-size: 18px; /* Reduce font size */
     }
   }
-
+  .get-started-button{
+    margin-left: 25px;
+  }
   .get-started-button1 {
     padding: 15px 75px;
     font-size: 23px;
