--- a/src/CartItem.css
+++ b/src/CartItem.css
@@ -1,5 +1,3 @@
-/* CartItem.css */
-/* CartItem.css */
 
 .cart-item {
   display: flex;
@@ -13,7 +11,6 @@
 .cart-item-image {
   width: 200px;
   height: 200px;
-  /* object-fit: contain; */
   margin-right: 20px;
 }
 
@@ -73,17 +70,12 @@
 .cart-item-delete:hover {
   background-color: #cc0000;
 }
-/* .cart-item-button-dec{
-  background-color: red;
-}
-.cart-item-button-inc{
-  background-color: green;
-} */
+
 @media (max-width: 768px) {
   .cart-item {
     flex-direction: column; /* Change flex direction to stack items vertically */
     align-items: flex-start; /* Align items to the start of the container */
-    width: 100%; /* Set width to full width */
+    width: 100%; 
   }
 
   .cart-item-image {
@@ -94,11 +86,11 @@
   }
 
   .cart-item-details {
-    width: 100%; /* Set details width to full width */
+    width: 100%; 
   }
 
   .cart-item-quantity {
-    margin-top: 10px; /* Add margin top for spacing */
+    margin-top: 10px; 
   }
 }
 .cart-item {
@@ -113,7 +105,6 @@
   .cart-item-image {
     width: 200px;
     height: 200px;
-    /* object-fit: contain; */
     margin-right: 20px;
   }
   
@@ -173,12 +164,7 @@
   .cart-item-delete:hover {
     background-color: #cc0000;
   }
-  /* .cart-item-button-dec{
-    background-color: red;
-  }
-  .cart-item-button-inc{
-    background-color: green;
-  } */
+ 
   @media (max-width: 768px) {
     .cart-item {
       flex-direction: column; /* Change flex direction to stack items vertically */
@@ -221,11 +207,11 @@
 }
    @media (max-width: 768px) {
     .cart-container {
-      padding: 10px; /* Reduce padding */
+      padding: 10px; 
     }
   
     .total_cart_amount {
-      font-size: 18px; /* Reduce font size */
+      font-size: 18px;
     }
   }
   .get-started-button{
@@ -242,4 +228,34 @@
     transition: background-color 0.3s ease;
     margin-top: 40px;
   }
+
+.cartList-wrapper {
+    position: relative;
+    min-height: 100vh;
+    width: 100%;
+    overflow-x: hidden;
+  }
+  
+.cartList-background {
+    background-image: url('https://cdn.pixabay.com/photo/2017/07/13/08/59/greenhouse-2499758_1280.jpg');
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -2;
+  }
+  
+.cartList-overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+  }
+    
   
