--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -191,9 +191,11 @@ body {
     width: 400px;
     text-align: center;
     margin: 20px;
-    border: 1px solid rgb(5, 4, 4);
+    border: 1px solid white;
     border-left: none;
     border-right: none;
+    color:white;
+    
 
     
 }
@@ -262,3 +264,33 @@ body {
         text-align: center; /* Align text to the center */
       }
   }
+
+.productlist-wrapper {
+    position: relative;
+    min-height: 100vh;
+    width: 100%;
+    overflow-x: hidden;
+  }
+  
+.productlist-background {
+    background-image: url('https://cdn.pixabay.com/photo/2017/07/13/08/59/greenhouse-2499758_1280.jpg');
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -2;
+  }
+  
+.productlist-overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+  }
+  
